[project]
name = "bpmclock"
version = "0.1.0"
description = "Tap tempo rhythm training with PID controller"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.2",
]

[tool.black]
line-length = 88
unstable = true

[tool.ruff]
# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes by default
select = ["E", "F", "I", "C90", "D205", "D212"]
ignore = ["F402", "E501"]

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

[tool.ruff.lint.mccabe]
# Flag errors if max complexity exceeded
max-complexity = 10

[tool.ruff.lint.isort]
force-single-line = true
